# PoH

./: Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  pyproject.toml  requirements.txt
main_app/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_appointments_user.py  0003_rename_appointments_appointment.py  0004_alter_patient_birthdate_alter_patient_doctors_and_more.py  0005_alter_patient_birthdate.py  0006_prescription.py  0007_remove_appointment_patient.py  0008_remove_appointment_user.py  0009_appointment_user.py  0010_appointment_patient.py  0011_remove_appointment_patient.py  0012_alter_prescription_size.py  0013_auto_20230107_0541.py  0014_alter_prescription_user.py  0015_alter_prescription_doctor.py  0016_auto_20230107_1712.py  0017_document.py  0018_document_title.py  0019_auto_20230110_1623.py  0020_insurance.py
main_app/static/css/: style.css
main_app/static/main_app/: _config.scss  _dashboard.scss  _home.scss  _profile.scss  style.scss
main_app/templates/: base.html  home.html
main_app/templates/appointments/: detail.html  index.html
main_app/templates/dashboard/: index.html  profile.html
main_app/templates/documents/: index.html
main_app/templates/insurance/: index.html
main_app/templates/main_app/: appointment_confirm_delete.html  appointment_form.html  insurance_confirm_delete.html  prescription_form.html
main_app/templates/prescriptions/: index.html  prescription_form.html
poh/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
(+132 files in other folders)
