[tool.poetry]
name = "poh"
version = "0.1.0"
description = ""
authors = ["MLeys <102929892+MLeys@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
dj-database-url = "^1.2.0"
daphne = "^4.0.0"
psycopg2-binary = "^2.9.5"
boto3 = "^1.26.48"
django-environ = "^0.9.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
